# Dofus-Window-Manager

./: .gitignore  DISTRIBUTION.md  README.md  config.example.json  config_gui.py  config_manager.py  configure.py  debug_windows.py  hotkey_manager.py  main.py  overlay.py  pyproject.toml  requirements.txt  test_mouse.py  window_detector.py  window_manager.py
